# UPC-MAI-CIR

./: .gitignore  README.md
cir_project/cir_project/: CMakeLists.txt  package.xml
cir_project/cir_tet/: CMakeLists.txt  package.xml
cir_project/cir_tet/scripts/: talker.py
cir_project/cir_user/: CMakeLists.txt  package.xml
cir_project/cir_user/scripts/: camera_user.py  peyetribe.py
cir_project/cir_user/srv/: UserAction.srv
cir_project/cirp_bringup/: CMakeLists.txt  package.xml
cir_project/cirp_bringup/launch/: cirp_bringup.launch
cir_project/cirp_bringup/rviz/: config.rviz
cir_project/cirp_bringup/scripts/: Environment.py  IRL.py  environment_client.py
cir_project/cirp_environment/: CMakeLists.txt  package.xml
cir_project/cirp_environment/launch/: cirp_environment.launch
cir_project/cirp_environment/scripts/: environemnt.py  environment.py  environment_server.py  remapping.txt
cir_project/cirp_environment/srv/: CirpEnvironmentAction.srv
cir_project/cirp_gazebo/: CMakeLists.txt  package.xml
cir_project/cirp_gazebo/affordances/blue_disk/: model-1_4.sdf  model.config
cir_project/cirp_gazebo/affordances/green_disk/: model.config  model.sdf
cir_project/cirp_gazebo/affordances/lab_table/: manifest.xml  model-1_4.sdf  model.sdf
cir_project/cirp_gazebo/affordances/lab_table/meshes/: lab_table.dae  lab_table.stl
cir_project/cirp_gazebo/affordances/number1blue/: model.config  model.sdf
cir_project/cirp_gazebo/affordances/number1blue/materials/scripts/: textures.material
cir_project/cirp_gazebo/affordances/number2blue/: model.config  model.sdf
cir_project/cirp_gazebo/affordances/number2blue/materials/scripts/: textures.material
cir_project/cirp_gazebo/affordances/number3blue/: model.config  model.sdf
cir_project/cirp_gazebo/affordances/number3blue/materials/scripts/: textures.material
cir_project/cirp_gazebo/affordances/red_disk/: model-1_4.sdf  model.config
cir_project/cirp_gazebo/affordances/wam_holder/: manifest.xml  model-1_4.sdf  model.config  model.sdf
cir_project/cirp_gazebo/affordances/wam_holder/meshes/: wam_holder.dae  wam_holder.stl
cir_project/cirp_gazebo/config/: iri_wam_control.yaml
cir_project/cirp_gazebo/launch/: cirp_sim.launch  iri_wam_control.launch
cir_project/cirp_gazebo/rviz/: config.rviz
cir_project/cirp_gazebo/scripts/: fake_joints_move_service.py
cir_project/cirp_gazebo/worlds/: world0.world
cir_project/cirp_user/: CMakeLists.txt  package.xml
cir_project/cirp_user/scripts/: camera_user.py  user_client.py
cir_project/cirp_vision/: .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
cir_project/cirp_vision/cfg/: .CirpVision.cfg.swp  CirpVision.cfg  rqt_gui.perspective
cir_project/cirp_vision/include/: .cirp_vision_alg.h.swp  .cirp_vision_alg_node.h.swp  cirp_vision_alg.h  cirp_vision_alg_node.h
cir_project/cirp_vision/launch/: .cirp_vision_sim.launch.swp  cirp_vision_real.launch  cirp_vision_sim.launch
cir_project/cirp_vision/msg/: .CirpDetectedPieces.msg.swp  CirpDetectedPieces.msg
cir_project/cirp_vision/scripts/: tf_camera_gui.py
cir_project/cirp_vision/src/: .cirp_vision_alg.cpp.swp  .cirp_vision_alg_node.cpp.swp  cirp_vision_alg.cpp  cirp_vision_alg_node.cpp
cir_project/cirp_wam_description/: CMakeLists.txt  package.xml
cir_project/cirp_wam_description/xacro/: gripper.urdf.xacro  iri_wam.urdf.xacro  iri_wam_no_kinect.urdf.xacro  kinect.urdf.xacro
cir_project/iri_cirp_digit_detector/: CMakeLists.txt  package.xml
cir_project/iri_cirp_digit_detector/cfg/: CirpDigitDetector.cfg
cir_project/iri_cirp_digit_detector/include/: cirp_digit_detector_alg.h  cirp_digit_detector_alg_node.h
cir_project/iri_cirp_digit_detector/src/: cirp_digit_detector_alg.cpp  cirp_digit_detector_alg_node.cpp
cir_project/iri_cirp_digit_detector/srv/: FindDigitsLocation.srv
irl/: Environment.py  IRL.ipynb  IRL.py  Qs.npy  Qs_estim_1.npy  RL.py  Tests.ipynb  User.py  cir_api.txt
